# serde-textual

./: .gitignore  Cargo.toml  README.md
examples/: email_address.rs  enum.rs  string_with_separator.rs  struct.rs  url.rs  uuid.rs
src/: assert_textual.rs  display.rs  from_str.rs  lib.rs
