[package]
name = "serde-textual"
version = "0.1.0"
edition = "2021"
description = "derive FromStr and Display by using serde impl"
categories = ["rust-patterns"]
keywords = ["serde", "derive", "fromstr", "display"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/serde-textual"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
