[package]
name = "serde-textual"
version = "0.1.0"
edition = "2021"
description = "derive Display/FromStr by using serde"
categories = ["rust-patterns"]
keywords = ["serde", "derive", "fromstr", "display"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/serde-textual"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
email_address = { version = "0.2.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
